--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -65,7 +65,7 @@
 
 /* Homepage Background */
 .Homepage {
-  background-image: url("../image/Homepage1.png");
+  background-image: url("../image/BedHostel.png");
  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -589,9 +589,10 @@
     text-align: center;
 }
 
+
 .bedCard {
-    width: 350px;
-    height: 460px;
+    width: 400px;
+    height: 500px;
     border-radius: 16px;
     padding: 6px;
     background-color: #00acc1; /* teal look like your example */
@@ -779,6 +780,10 @@
     font-size: 0.95rem;
     color: #333;
     line-height: 1.6;
+}
+.SearchBar{
+  margin-left: 100px;
+  margin-top: 20px;
 }
 
 
