--- a/project1/webapp/view/TilePage.view.xml
+++ b/project1/webapp/view/TilePage.view.xml
@@ -1,56 +1,53 @@
-<mvc:View controllerName="sap.ui.com.project1.controller.TilePage"  xmlns:mvc="sap.ui.core.mvc" displayBlock="true" 
-	xmlns="sap.m" 
-	xmlns:ux="sap.uxap" 
-	xmlns:core="sap.ui.core" 
-	xmlns:layout="sap.ui.layout" 
-	xmlns:l="sap.ui.layout" 
-	xmlns:f="sap.f" 
+<mvc:View controllerName="sap.ui.com.project1.controller.TilePage"
+	xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
+	xmlns="sap.m"
+	xmlns:ux="sap.uxap"
+	xmlns:core="sap.ui.core"
+	xmlns:layout="sap.ui.layout"
+	xmlns:l="sap.ui.layout"
+	xmlns:f="sap.f"
 	xmlns:card="sap.f.cards">
-    <App >
-    <Page  id="idPageTile" class="service-background" showHeader="true" enableScrolling="false">
-    <headerContent>
+	<App >
+		<Page  id="idPageTile" class="service-background" showHeader="true" enableScrolling="false">
+			<headerContent>
 				<Text text="{= 'Welcome ' + ${LoginModel>/EmployeeName} }" class="boldBlueText sapUiLargeMarginBegin" />
 				<ToolbarSpacer />
 				<Button press="Tile_onLogPress" icon="sap-icon://log" />
 			</headerContent>
-            <ux:ObjectPageLayout upperCaseAnchorBar="false" id="id_ObjectPageLayoutTile">
-            <ux:sections>
-            
-<ux:ObjectPageSection id="id_Sectiontile" titleUppercase="false" title="Home" visible="{= ${TileAccessModel>/Home} === '1' ? true : false}">
-									<ux:subSections>
-										<ux:ObjectPageSubSection titleUppercase="false">
-											<ux:blocks>
-												<layout:HorizontalLayout allowWrapping="true" class="sapUiTinyMargin">
-													<GenericTile visible="true" class="sapUiMediumMargin" header="Assign Rooms" press="TileV_onpressInbox">
-														<TileContent unit="Assign Rooms">
-															<ImageContent src="sap-icon://inbox" />
-														</TileContent>
-													</GenericTile>
-													<GenericTile visible="true" class="sapUiMediumMargin" header="Add Room Details" press="TileV_onpressroomdetails">
-														<TileContent unit="Add Room Details">
-															<ImageContent src="sap-icon://inbox" />
-														</TileContent>
-													</GenericTile>
-													<GenericTile visible="true" class="sapUiMediumMargin" header="Add Bed Details" press="TileV_onpressbeddetails">
-														<TileContent unit="Add Bed Details">
-															<ImageContent src="sap-icon://inbox" />
-														</TileContent>
-													</GenericTile>
-														<GenericTile visible="true" class="sapUiMediumMargin" header="Add Extra facilities" press="TileV_onpressextrafacilities">
-														<TileContent unit="Add Extra facilities">
-															<ImageContent src="sap-icon://inbox" />
-														</TileContent>
-													</GenericTile>
-												</layout:HorizontalLayout>
-											</ux:blocks>
-										</ux:ObjectPageSubSection>
-									</ux:subSections>
-								</ux:ObjectPageSection>
-
-
-
-            </ux:sections>
-            </ux:ObjectPageLayout>
-    </Page>
-    </App>
+			<ux:ObjectPageLayout upperCaseAnchorBar="false" id="id_ObjectPageLayoutTile">
+				<ux:sections>
+					<ux:ObjectPageSection id="id_Sectiontile" titleUppercase="false" title="Home" visible="{= ${TileAccessModel>/Home} === '1' ? true : false}">
+						<ux:subSections>
+							<ux:ObjectPageSubSection titleUppercase="false">
+								<ux:blocks>
+									<layout:HorizontalLayout allowWrapping="true" class="sapUiTinyMargin">
+										<GenericTile visible="true" class="sapUiMediumMargin" header="Manage Rooms" press="TileV_onpressInbox">
+											<TileContent unit="Assign Rooms">
+												<ImageContent src="sap-icon://building" />
+											</TileContent>
+										</GenericTile>
+										<GenericTile visible="true" class="sapUiMediumMargin" header="Manage Room Details" press="TileV_onpressroomdetails">
+											<TileContent unit="Room Details">
+												<ImageContent src="sap-icon://detail-view" />
+											</TileContent>
+										</GenericTile>
+										<GenericTile visible="true" class="sapUiMediumMargin" header="Manage Bed Details" press="TileV_onpressbeddetails">
+											<TileContent unit="Bed Details">
+												<ImageContent src="sap-icon://bed" />
+											</TileContent>
+										</GenericTile>
+										<GenericTile visible="true" class="sapUiMediumMargin" header="Manage Extra Facilities" press="TileV_onpressextrafacilities">
+											<TileContent unit="Extra facilities">
+												<ImageContent src="sap-icon://activities" />
+											</TileContent>
+										</GenericTile>
+									</layout:HorizontalLayout>
+								</ux:blocks>
+							</ux:ObjectPageSubSection>
+						</ux:subSections>
+					</ux:ObjectPageSection>
+				</ux:sections>
+			</ux:ObjectPageLayout>
+		</Page>
+	</App>
 </mvc:View>
