Room details and Login Navigation

--- a/project1/webapp/view/Room_Details.view.xml
+++ b/project1/webapp/view/Room_Details.view.xml
@@ -171,11 +171,8 @@
                             <Text text="{RoomDetailsModel>BedTypeName}" />
                             <Text text="{RoomDetailsModel>NoofPerson}" />
                             <Text text="{RoomDetailsModel>ExtraBed}" />
+                            <Text text="{= ${RoomDetailsModel>Price} ? ${RoomDetailsModel>Price} + ' ' + ${RoomDetailsModel>PriceType} : '' }" />
 
-
-
-                          
-                            <Text text="{RoomDetailsModel>Price}" />
                             <!-- <Text text="{HostelModel>RoomType}" /> -->
                            <Button
                             text="View"
