Admin portal bug solved

--- a/project1/webapp/view/Admin.view.xml
+++ b/project1/webapp/view/Admin.view.xml
@@ -136,7 +136,7 @@
                             type="Accept"
                         />
                          <Button
-                            text="Change Room"
+                            text="Edit Room"
                             press="HM_ChangeRoom"
                             type="Default"
                         />
