--- a/project1/webapp/view/Book_Room.view.xml
+++ b/project1/webapp/view/Book_Room.view.xml
@@ -107,7 +107,7 @@
                     text="proceed to pay"
                     visible="{OBTNModel>/Submit}"
                     type="Emphasized"
-                    press="onSubmitPress"
+                    press="onOpenProceedtoPay"
                 />
                 <Button
                     text="Cancel"
